# veritas

./: .gitignore  AZURE.md  BAREMETAL.md  LICENSE  README.md  osc-support-1.11.json  pyproject.toml
scripts/: compute-all.py
src/veritas/: __main__.py  container.py  models.py  xfam.py
